# PaperGraph

./: .dockerignore  README.md  dockerfile  main.py  pyproject.toml  structure.txt
notebooks/: arxiv.ipynb  ingest_trial.ipynb  rag_updated.ipynb
templates/: index.html
