[project]
name = "PaperGraph"
version = "0.1.0"
description = "Graph-RAG for Research Papers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.2",
]
