[project]
name = "PaperGraph"
version = "0.1.0"
description = "Graph-RAG for Research Papers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.1",
    "pymupdf>=1.24.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.2",
    "huggingface-hub>=1.7.1",
    "unstructured[pdf]>=0.21.5",
    "numpy>=2.4.3",
    "unstructured-inference>=1.5.2",
    "langgraph>=1.1.2",
    "matplotlib>=3.10.8",
]
